<resources>
    <string name="app_name">DSApp</string>
    <string name="title_courses">Курсы</string>
    <string name="title_lessons">Занятия</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="loginButton_hint">Войти</string>
    <string name="logoutButton_hint">Выйти</string>
    <string name="registerButton_hint">Зарегистрироваться</string>

    <string name="loginInAccount_label">Войдите в свою учетную запись</string>
    <string name="registration_label">Регистрация</string>
    <string name="firstname_label">Имя</string>
    <string name="lastname_label">Фамилия</string>
    <string name="middlename_label">Отчество</string>
    <string name="tnumber_label">Номер телефона</string>
    <string name="email_label">Почта (логин)</string>
    <string name="password_label">Пароль</string>
    <string name="confirm_password_label">Подтвердите пароль</string>

</resources>