<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_lessons">

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.yeah.dsapp.ui.courses.CoursesFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_lessons"
        android:name="com.yeah.dsapp.ui.dashboard.LessonsFragment"
        android:label="@string/title_lessons"
        tools:layout="@layout/fragment_lessons" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:name="com.yeah.dsapp.ui.notifications.NotificationsFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notifications" />-->

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.yeah.dsapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
        android:id="@+id/action_profileFragment_to_loginFragment"
        app:destination="@id/fragment_login" />
        <action
            android:id="@+id/action_profileFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
    </fragment>

    <!--  Login fragment  -->
    <fragment
        android:id="@+id/fragment_login"
        android:name="com.yeah.dsapp.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login"/>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.yeah.dsapp.ui.registration.RegistrationFragment"
        android:layout="@layout/fragment_registration" />
</navigation>